# 3DViewer

./: CMakeLists.txt  Makefile  README.md  main.cpp  main.qml  qml.qrc
Controller/: controller.cc  controller.h
Model/: gif.h  gifcreator.cc  gifcreator.h  modelcore.cc  modelcore.h  saveload.cc  saveload.h
Tests/: tests.cc
View/: gradienttex.cc  gradienttex.h  modelfacade.h  modelinstance.cc  modelinstance.h  modelview.cc  modelview.h
